RESOLVED FIXED224763
Separated models don't get opacity set on them at all
https://bugs.webkit.org/show_bug.cgi?id=224763
Summary Separated models don't get opacity set on them at all
Sam Weinig
Reported 2021-04-19 08:56:31 PDT
Separated models don't get opacity set on them at all
Attachments
Patch (2.00 KB, patch)
2021-04-19 08:59 PDT, Sam Weinig
no flags
Patch (11.14 KB, patch)
2021-04-19 12:49 PDT, Sam Weinig
ews-feeder: commit-queue-
Patch (19.60 KB, patch)
2021-04-19 15:19 PDT, Sam Weinig
no flags
Patch (23.99 KB, patch)
2021-04-20 10:22 PDT, Sam Weinig
no flags
Sam Weinig
Comment 1 2021-04-19 08:59:34 PDT Comment hidden (obsolete)
Sam Weinig
Comment 2 2021-04-19 12:49:13 PDT Comment hidden (obsolete)
Sam Weinig
Comment 3 2021-04-19 15:19:44 PDT Comment hidden (obsolete)
Sam Weinig
Comment 4 2021-04-20 10:22:24 PDT
Sam Weinig
Comment 5 2021-04-20 10:23:15 PDT
Now with tests!
Tim Horton
Comment 6 2021-04-20 14:56:04 PDT
Comment on attachment 426564 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=426564&action=review > Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:3946 > + if (&layer == m_contentsLayer.get()) { I love this. > Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:3987 > + if (flags.contains(PlatformLayerTreeAsTextFlags::IncludeOpacity)) It is probably overkill to add a flag for opacity, just only dump it if it's non-1? But this is fine too. > LayoutTests/model-element/model-element-graphics-layers.html:22 > + model.remove(); subtle and hilarious. someday we should really debug this.
Simon Fraser (smfr)
Comment 7 2021-04-20 15:17:17 PDT
Comment on attachment 426564 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=426564&action=review >> Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:3987 >> + if (flags.contains(PlatformLayerTreeAsTextFlags::IncludeOpacity)) > > It is probably overkill to add a flag for opacity, just only dump it if it's non-1? But this is fine too. Agree
EWS
Comment 8 2021-04-20 16:21:15 PDT
Committed r276327 (236807@main): <https://commits.webkit.org/236807@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 426564 [details].
Sam Weinig
Comment 9 2021-04-21 14:14:44 PDT
For future historians, the removal of the model was not actually necessary. All we really needed to do was fix the </p> to be </pre>.
Ling Ho
Comment 10 2021-04-23 02:44:09 PDT
Note You need to log in before you can comment on or make changes to this bug.