Source/WebCore/platform/graphics/GraphicsLayerClient.h
@@ -90,6 +90,7 @@ typedef unsigned LayerTreeAsTextBehavior;
 enum class PlatformLayerTreeAsTextFlags : uint8_t {
     Debug = 1 << 0,
     IgnoreChildren = 1 << 1,
+    IncludeOpacity = 1 << 2,
 };
 
 enum GraphicsLayerPaintFlags {
