Source/WebCore/testing/Internals.cpp
@@ -2861,6 +2861,8 @@ static OptionSet<PlatformLayerTreeAsTextFlags> toPlatformLayerTreeFlags(unsigned
         platformLayerTreeFlags.add(PlatformLayerTreeAsTextFlags::Debug);
     if (flags & Internals::PLATFORM_LAYER_TREE_IGNORES_CHILDREN)
         platformLayerTreeFlags.add(PlatformLayerTreeAsTextFlags::IgnoreChildren);
+    if (flags & Internals::PLATFORM_LAYER_TREE_INCLUDE_OPACITY)
+        platformLayerTreeFlags.add(PlatformLayerTreeAsTextFlags::IncludeOpacity);
     return platformLayerTreeFlags;
 }
 
